classDiagram

class User {
    +int id
    +string email
    +string hashed_password
    +string full_name
    +bool is_active
    +datetime created_at
    +datetime updated_at
    +UserRole role
}

class UserRole {
    <<enumeration>>
    READER
    LIBRARIAN
    ADMIN
}

class Author {
    +int id
    +string full_name
    +datetime created_at
    +datetime updated_at
}

class Book {
    +int id
    +string title
    +string isbn
    +int published_year
    +datetime created_at
    +datetime updated_at
}

class Copy {
    +int id
    +string inventory_code
    +CopyStatus status
    +datetime created_at
    +datetime updated_at
}

class CopyStatus {
    <<enumeration>>
    AVAILABLE
    LOANED
    LOST
    DAMAGED
}

class Loan {
    +int id
    +LoanStatus status
    +datetime loaned_at
    +datetime returned_at
}

class LoanStatus {
    <<enumeration>>
    ACTIVE
    RETURNED
}

User --> UserRole : role

Author "1" --> "many" Book : writes
Book "1" --> "many" Copy : contains

User "1" --> "many" Loan : borrows
Copy "1" --> "many" Loan : loan history

Copy --> CopyStatus : status
Loan --> LoanStatus : status
